--- a/www.nass.gov.ng/85514abce639afbd93ad93823aa5ddb542f615c1.yml
+++ b/www.nass.gov.ng/85514abce639afbd93ad93823aa5ddb542f615c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:04:49 GMT
+    - Sat, 24 Mar 2018 23:00:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ji7CUS0IY%2CfUPo9iL%2CZ2U3; path=/
+    - PHPSESSID=RHuaMOBlWOlEkLjGyoIo72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:04:49 GMT
+recorded_at: Sat, 24 Mar 2018 23:00:48 GMT
