--- a/www.nass.gov.ng/d07bd3c9c4b95f273413134970b881a83fce7e10.yml
+++ b/www.nass.gov.ng/d07bd3c9c4b95f273413134970b881a83fce7e10.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:06:43 GMT
+    - Sat, 24 Mar 2018 23:02:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ao4gQgD6NiX1SgwV7KmZB1; path=/
+    - PHPSESSID=4llBP-zBk%2CF0lcPJtptaA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:06:43 GMT
+recorded_at: Sat, 24 Mar 2018 23:02:28 GMT
