--- a/www.nass.gov.ng/79b8027933a14c2146e4ea7305a81cfab4211992.yml
+++ b/www.nass.gov.ng/79b8027933a14c2146e4ea7305a81cfab4211992.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:11:13 GMT
+    - Sat, 24 Mar 2018 23:05:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SU%2C11HvtnzXrxAiAg75zB2; path=/
+    - PHPSESSID=2mxMl-00kNBPxlv3w0Oc30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:11:13 GMT
+recorded_at: Sat, 24 Mar 2018 23:05:07 GMT
