--- a/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
+++ b/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:14:27 GMT
+    - Sat, 24 Mar 2018 23:08:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H9%2CxNmh3bLld%2CjEDPz0xA2; path=/
+    - PHPSESSID=-fkuK8SiPrjvj0MStGUbw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:14:27 GMT
+recorded_at: Sat, 24 Mar 2018 23:08:32 GMT
