--- a/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
+++ b/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:16:19 GMT
+    - Sat, 24 Mar 2018 23:09:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=itQo4Hdu4-1PgwZkrzj%2C22; path=/
+    - PHPSESSID=qn-i0J5eI2pFA9lTERAvy2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:16:19 GMT
+recorded_at: Sat, 24 Mar 2018 23:09:08 GMT
