--- a/www.nass.gov.ng/a6d291e613e1afe928211944b971f6cdc72fc080.yml
+++ b/www.nass.gov.ng/a6d291e613e1afe928211944b971f6cdc72fc080.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:27:16 GMT
+    - Sat, 24 Mar 2018 23:19:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=94naLqm2zGH%2CwVE%2C5Agru3; path=/
+    - PHPSESSID=PkXj8OmT2CLxeRdJTH8y52; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:27:16 GMT
+recorded_at: Sat, 24 Mar 2018 23:19:44 GMT
