--- a/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
+++ b/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:37:44 GMT
+    - Sat, 24 Mar 2018 23:29:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lmZ1HGRzpqPxQk020i8C%2C1; path=/
+    - PHPSESSID=Hxf--61Ev4UfBiW4imHJt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:37:44 GMT
+recorded_at: Sat, 24 Mar 2018 23:29:14 GMT
