--- a/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
+++ b/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:43:06 GMT
+    - Sat, 24 Mar 2018 23:34:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Voy5LBgu86wtpFGf%2CGVjX2; path=/
+    - PHPSESSID=ro4z1hyXNtM0e7niXUO500; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:43:06 GMT
+recorded_at: Sat, 24 Mar 2018 23:34:12 GMT
