--- a/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
+++ b/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:52:34 GMT
+    - Sat, 24 Mar 2018 23:42:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WCZ%2CMZiNzHuNskBsBxjAK1; path=/
+    - PHPSESSID=r84G%2C7wGrUBKYBwMja4ic0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:52:34 GMT
+recorded_at: Sat, 24 Mar 2018 23:42:46 GMT
