--- a/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
+++ b/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 07:25:29 GMT
+    - Sun, 25 Mar 2018 00:13:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ri25T0bkqpTfJlxfD5zPr3; path=/
+    - PHPSESSID=xRcG%2C%2C3xeVJze6Lsi4Ugs3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 07:25:29 GMT
+recorded_at: Sun, 25 Mar 2018 00:13:28 GMT
