--- a/www.nass.gov.ng/4fc74d41a3582a47bb15c88bb8e7ad73c6f04285.yml
+++ b/www.nass.gov.ng/4fc74d41a3582a47bb15c88bb8e7ad73c6f04285.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 07:30:55 GMT
+    - Sun, 25 Mar 2018 00:18:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tQ%2COn%2C5zCLFQCZaEYWNEt2; path=/
+    - PHPSESSID=eWlek9yfEMJOngA-RNuUr3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 07:30:55 GMT
+recorded_at: Sun, 25 Mar 2018 00:18:39 GMT
